examples/test/testpolicy5489.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5489
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key33: value9
      key21: value29
      key11: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value6
      podSelector:
        matchLabels:
          key14: value35
